--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
           yesButton.style.fontSize = currentFontSize + 10 + "px"; // Increase font size by 5px
         });
     </script>
-  </body><audio autoplay loop style="display:none;">
+  </body>
+  <audio autoplay loop style="display:none;">
   <source src="namsan.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
