--- a/index.html
+++ b/index.html
@@ -30,25 +30,4 @@
     </script>
   <body>
 
-  <!-- GIF (already looping) -->
-  <img src="rizz.gif" alt="Rizz GIF">
-
-  <!-- Audio (hidden) -->
-  <audio id="bgAudio" loop>
-    <source src="namsan.mp3" type="audio/mpeg">
-  </audio>
-
-  <!-- JavaScript to play audio on first click -->
-  <script>
-    const audio = document.getElementById('bgAudio');
-
-    // Play audio when the user clicks anywhere on the page
-    document.body.addEventListener('click', () => {
-      audio.play();
-    }, { once: true }); // "once: true" ensures it only triggers on first click
-  </script>
-
-</body>
-
-
-</html>
+<html>
