--- a/index.html
+++ b/index.html
@@ -7,6 +7,28 @@
     <link rel="stylesheet" href="css/valentine.css" />
   </head>
   <body>
+    <body>
+
+  <!-- GIF (already looping) -->
+  <img src="rizz.gif" alt="Rizz GIF">
+
+  <!-- Audio (hidden) -->
+  <audio id="bgAudio" loop>
+    <source src="namsan.mp3" type="audio/mpeg">
+  </audio>
+
+  <!-- JavaScript to play audio on first click -->
+  <script>
+    const audio = document.getElementById('bgAudio');
+
+    // Play audio when the user clicks anywhere on the page
+    document.body.addEventListener('click', () => {
+      audio.play();
+    }, { once: true }); // "once: true" ensures it only triggers on first click
+  </script>
+
+</body>
+
     <div id="valentineQuestion"><b>Will you be my valentine?</b></div>
     <button class="answerButton" onclick="location.href='thankyou.html'">
       Yes
