--- a/activities.html
+++ b/activities.html
@@ -10,17 +10,17 @@
     <div id="activityquestion"><b>What are we doing after?</b></div>
     <div class="activities-selection">
       <div class="activity-item">
-        <img src="activities/aquarium.jpeg" alt="aquarium" />
+        <img src="activities/karaoke.JPG" alt="karaoke" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="aquarium"
+            value="Karaoke"
           />aquarium</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/arcade.jpeg" alt="arcade" />
+        <img src="activities/arcade.JPG" alt="Arcade" />
         <label
           ><input
             type="checkbox"
@@ -30,42 +30,42 @@
         >
       </div>
       <div class="activity-item">
-        <img src="activities/cinema.jpeg" alt="cinema" />
+        <img src="activities/cinema.JPG" alt="Cinema" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="cinema"
+            value="Cinema"
           />cinema</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/keramika.jpeg" alt="ceramics" />
+        <img src="activities/japantrip.jpeg" alt="Japan Trip" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="ceramics"
+            value="Japan Trip"
           />ceramics</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/kunsthalle.jpeg" alt="kunsthalle" />
+        <img src="activities/foodtrip.jpeg" alt="Food Trip" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="kunsthalle"
+            value="Food Trip"
           />exhibition</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/park.jpeg" alt="park.jpeg" />
+        <img src="activities/sunset.jpeg" alt="Sunset" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="park.jpeg"
+            value="Sunset"
           />park</label
         >
       </div>
