--- a/activities.html
+++ b/activities.html
@@ -16,7 +16,7 @@
             type="checkbox"
             name="activities"
             value="Karaoke"
-          />aquarium</label
+          />Karaoke</label
         >
       </div>
       <div class="activity-item">
@@ -26,7 +26,7 @@
             type="checkbox"
             name="activities"
             value="arcade"
-          />arcade</label
+          />Arcade</label
         >
       </div>
       <div class="activity-item">
@@ -36,7 +36,7 @@
             type="checkbox"
             name="activities"
             value="Cinema"
-          />cinema</label
+          />Cinema</label
         >
       </div>
       <div class="activity-item">
@@ -46,7 +46,7 @@
             type="checkbox"
             name="activities"
             value="Japan Trip"
-          />ceramics</label
+          />Japan Trip</label
         >
       </div>
       <div class="activity-item">
@@ -56,7 +56,7 @@
             type="checkbox"
             name="activities"
             value="Food Trip"
-          />exhibition</label
+          />Food Trip</label
         >
       </div>
       <div class="activity-item">
@@ -66,7 +66,7 @@
             type="checkbox"
             name="activities"
             value="Sunset"
-          />park</label
+          />Sunset</label
         >
       </div>
     </div>
